css/dialogs-common.css
/* ... */
/* end of Email verification required */

/* Login to account if account has been suspended */
.mega-dialog.type-480px227 {
    max-width: 480px;
}
.login-set-pass.content-block {
    padding: 22px 35px 35px 35px;
    font: var(--text-body1);
    color: var(--text-color-high);
    text-align: center;
}
.login-set-pass .text {
    padding: 2px 0 18px 0;
}
.login-set-pass .dialog-login-form {
    margin-top: 9px;
}
.mobile .mega-dialog.type-480px227 {
    max-width: 100%;
}
.mobile .login-set-pass .text {
    padding-bottom: 5px;
}
.mobile .login-set-pass .dialog-login-form.low-pad {
    margin-top: -10px;
}
.mobile .login-set-pass .text {
    padding: 2px 0 10px 0;
}
.mobile .account.dialog-login-form-low-pad {
    margin-top: -5px;
}
.mobile .login-set-pass .dialog-login-form {
    margin-top: 0;
}
.mobile .login-set-pass .dialog-top-icon.locked-account {
    margin-bottom: 5px;
}
.mobile .type-480px227 .mega-input.title-ontop {
    margin-bottom: 10px;
}
.mobile .login-set-pass button {
    margin-top: 0;
}

/* end of Login to account if account has been suspended */

@media only screen and (orientation: landscape) {
    .mobile .verify-email.header {
        padding-top: 14px;
    }
}

/* minimal styling to make shared mega-dialogs work */

.mobile .mega-dialog-container {
    width: 100%;
    height: 100%;
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    left: 0;
    top: 0;
    z-index: 1300;
    pointer-events: none;
}

.mobile .mega-dialog-container > * {
    pointer-events: initial;
}

.mobile .mega-dialog {
    position: absolute;
    background: #fff;
}

.mobile .mega-dialog:not(.fullsize-on-mobile) {
    border-radius: 24px;
}

.mobile .mega-dialog.fullsize-on-mobile {
    border-radius: 0;
}

.mobile .mega-dialog footer {
    text-align: center;
}

.mobile .mega-dialog aside {
    min-height: 24px;
}

.mobile .mega-dialog .mega-button {
    height: 48px;
    line-height: 48px;
    display: inline-block;
    min-width: 128px;
    font-size: 14px;
    border-radius: 4px;
    padding: 0 25px;
    cursor: pointer;
    position: relative;
    box-sizing: border-box;
    white-space: nowrap;
    outline: none;
    appearance: none;
    border: none;
}

.mobile .mega-dialog .mega-button.disabled {
    opacity: 0.4;
}

.mobile .mega-dialog .mega-button::before {
    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.15);
    content: "";
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    border-radius: inherit;
}

.mobile .mega-dialog footer button.positive,
.mobile .mega-dialog .mega-button.positive {
    background: linear-gradient(to bottom, #00bfa5 0%, #00a690 100%);
    color: white;
}

/* verify-email */

    .mobile .verify-email button.close {
        display: none;
    }

/* end verify-email */

/* verify-email-login-to-account */

    .mobile .verify-email-login-to-account button.close {
        display: none;
    }

    .mobile .verify-email-login-to-account header h2 {
        font-size: 16px;
        color: #333;
        text-align: center;
        line-height: 24px;
        margin-bottom: 0;
        font-family: var(--text-font-family);
    }

    .mobile .verify-email-login-to-account .content-block {
        padding: 10px 25px 25px 25px;
    }

    .mobile .verify-email-login-to-account .dialog-top-icon.locked-account {
        margin: 16px auto;
    }

/* end verify-email-login-to-account */

/* verify-email-set-new-pass */

    .mobile .verify-email-set-new-pass button.close {
        display: none;
    }

    .mobile .verify-email-set-new-pass header h2 {
        font-size: 16px;
        color: #333;
        text-align: center;
        line-height: 24px;
        margin-bottom: 0;
        font-family: var(--text-font-family);
        margin-top: 18px;
    }

    .mobile .verify-email-set-new-pass .content-block {
        padding: 10px 25px 25px 25px;
    }

/* end verify-email-set-new-pass */

@media only screen and (max-height: 600px) {
    .mega-dialog > section {
        flex-shrink: 0;
    }
}

